--- a/My_Overview.html
+++ b/My_Overview.html
@@ -89,7 +89,6 @@
         <p>2018年4月-至今 | PHP工程师</p>
         <ul>
           <li>作为核心开发负责设计和开发<b>Web背调系统</b>，优化功能逻辑和代码设计,提升系统强度和用户的体验。</li>
-          <li>根据行业需求分析设计方案可行性，对项目代码进行测试优化，提高系统可用性。</li>
           <li>负责公司技术文档以及对外SaaS平台接口文档的编写以及维护。</li>
         </ul>
         <!-- 第一个项目的介绍，多个项目可以复制project-span区块-->
@@ -106,8 +105,7 @@
         <b>上海知音文化有限公司</b>
         <p>2017年12月-2018年4月 | 后端工程师</p>
         <ul>
-          <li>配合项目经理设计功能逻辑,<b>使用Workbench设计数据表关系图。</b>
-          <li>基于公司自研框架开发各类功能组件,与产品人员讨论具体实施方案,并提出优化建议。</li>
+          <li>配合项目经理设计功能逻辑,使用Workbench设计数据表关系图。
         </ul>
         <span class="project-span">
           <b>知音宝贝(儿童钢琴课游戏)</b>
